--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "A better patent search experience",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/lucasschejtman/patoogle/issues"
   },
-  "homepage": "https://github.com/lucasschejtman/patoogle#readme"
+  "homepage": "https://github.com/lucasschejtman/patoogle#readme",
+  "dependencies": {
+    "hapi": "^15.2.0"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0"
+  }
 }
