--- a/infrastructure/dev.yml
+++ b/infrastructure/dev.yml
@@ -18,3 +18,5 @@ postgres:
   hostname: postgres
   ports:
     - "5432:5432"
+  volumes:
+    - "./scripts/init_db.sh:/docker-entrypoint-initdb.d/init_db.sh"
