--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "A better patent search experience",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "npm run db:migrate:latest && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:init": "knex init",
     "db:migrate:make": "knex migrate:make $NAME",
