--- a/src/package.json
+++ b/src/package.json
@@ -26,13 +26,19 @@
   },
   "homepage": "https://github.com/lucasschejtman/patoogle#readme",
   "dependencies": {
+    "aguid": "^1.0.4",
+    "bcrypt": "^0.8.7",
     "bookshelf": "^0.10.2",
     "hapi": "^15.2.0",
+    "hapi-auth-jwt2": "^7.1.3",
+    "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.6",
     "pg": "^6.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-plugin-transform-async-functions": "^6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
