--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "bookshelf": "^0.10.2",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
+    "joi": "^9.2.0",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.6",
     "pg": "^6.1.0"
