--- a/server/package.json
+++ b/server/package.json
@@ -31,10 +31,13 @@
     "bookshelf": "^0.10.2",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
+    "hapi-swagger": "^7.4.0",
+    "inert": "^4.0.2",
     "joi": "^9.2.0",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.6",
-    "pg": "^6.1.0"
+    "pg": "^6.1.0",
+    "vision": "^4.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
