--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "bookshelf": "^0.10.2",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
+    "hapi-router": "^3.5.0",
     "hapi-swagger": "^7.4.0",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
