--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "aguid": "^1.0.4",
     "bcrypt": "^0.8.7",
     "bookshelf": "^0.10.2",
+    "boom": "^4.2.0",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
     "hapi-router": "^3.5.0",
