--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "boom": "^4.2.0",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
+    "hapi-authorization": "^3.0.2",
     "hapi-router": "^3.5.0",
     "hapi-swagger": "^7.4.0",
     "inert": "^4.0.2",
