--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^0.8.7",
     "bookshelf": "^0.10.2",
     "boom": "^4.2.0",
+    "convict": "^1.5.0",
     "elasticsearch": "^12.0.1",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.1.3",
