--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.js",
     "build": "babel src --out-dir build",
     "start": "npm run db:migrate:latest && node build/index",
-    "test": "ava",
+    "test": "nyc ava",
+    "coverage": "nyc report --reporter=text-html --reporter=text-lcov",
     "db:init": "knex init",
     "db:seed:make": "knex seed:make",
     "db:seed:run": "knex seed:run",
@@ -42,6 +43,25 @@
     ],
     "babel": "inherit"
   },
+  "nyc": {
+    "lines": 50,
+    "statements": 50,
+    "functions": 50,
+    "branches": 50,
+    "include": [
+      "src/**/*.js"
+    ],
+    "require": [
+      "babel-register",
+      "babel-polyfill"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "check-coverage": true,
+    "all": true
+  },
   "dependencies": {
     "aguid": "^1.0.4",
     "bcrypt": "^0.8.7",
@@ -70,6 +90,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "nyc": "^8.4.0"
   }
 }
