--- a/server/package.json
+++ b/server/package.json
@@ -91,6 +91,8 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "nodemon": "^1.11.0",
-    "nyc": "^8.4.0"
+    "nyc": "^8.4.0",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.6"
   }
 }
