--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir build",
     "start": "npm run db:migrate:latest && node build/index",
     "test": "nyc ava",
-    "coverage": "nyc report --reporter=text-html --reporter=text-lcov",
+    "coverage": "nyc report --reporter=html --reporter=text-lcov",
     "db:init": "knex init",
     "db:seed:make": "knex seed:make",
     "db:seed:run": "knex seed:run",
