--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir build",
     "start": "npm run db:migrate:latest && node build/index",
     "test": "nyc ava",
-    "coverage": "nyc report --reporter=html --reporter=text-lcov",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "db:init": "knex init",
     "db:seed:make": "knex seed:make",
     "db:seed:run": "knex seed:run",
@@ -90,6 +90,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "coveralls": "^2.11.14",
     "nodemon": "^1.11.0",
     "nyc": "^8.4.0",
     "proxyquire": "^1.7.10",
