--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon index.js",
     "build": "babel src --out-dir build",
     "start": "npm run db:migrate:latest && node build/index",
-    "test": "nyc ava",
+    "test": "cross-env NODE_ENV=test nyc ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "db:init": "knex init",
     "db:seed:make": "knex seed:make",
@@ -29,6 +29,22 @@
     "url": "https://github.com/lucasschejtman/patoogle/issues"
   },
   "homepage": "https://github.com/lucasschejtman/patoogle#readme",
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-async-functions"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "istanbul"
+        ]
+      }
+    }
+  },
   "ava": {
     "files": [
       "test/**/*.test.js"
@@ -44,10 +60,10 @@
     "babel": "inherit"
   },
   "nyc": {
-    "lines": 95,
-    "statements": 95,
-    "functions": 95,
-    "branches": 80,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
     "include": [
       "src/**/*.js"
     ],
@@ -60,7 +76,9 @@
       "text-summary"
     ],
     "check-coverage": true,
-    "all": true
+    "all": true,
+    "sourceMap": false,
+    "instrument": false
   },
   "dependencies": {
     "aguid": "^1.0.4",
@@ -85,12 +103,14 @@
   "devDependencies": {
     "ava": "^0.16.0",
     "babel": "^6.5.2",
+    "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-transform-async-functions": "^6.8.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "coveralls": "^2.11.14",
+    "cross-env": "^3.1.3",
     "nodemon": "^1.11.0",
     "nyc": "^8.4.0",
     "proxyquire": "^1.7.10",
