--- a/importer/package.json
+++ b/importer/package.json
@@ -82,7 +82,7 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-transform-async-functions": "^6.8.0",
     "babel-polyfill": "^6.16.0",
