--- a/importer/package.json
+++ b/importer/package.json
@@ -76,9 +76,12 @@
     "bookshelf": "^0.10.2",
     "commander": "^2.9.0",
     "convict": "^1.5.0",
+    "data.maybe": "^1.2.2",
     "elasticsearch": "^12.0.1",
     "knex": "^0.12.6",
-    "pg": "^6.1.0"
+    "node-expat": "^2.3.15",
+    "pg": "^6.1.0",
+    "ramda": "^0.22.1"
   },
   "devDependencies": {
     "ava": "^0.16.0",
