--- a/importer/package.json
+++ b/importer/package.json
@@ -79,9 +79,9 @@
     "data.maybe": "^1.2.2",
     "elasticsearch": "^12.0.1",
     "knex": "^0.12.6",
-    "node-expat": "^2.3.15",
     "pg": "^6.1.0",
-    "ramda": "^0.22.1"
+    "ramda": "^0.22.1",
+    "xml-stream": "^0.4.5"
   },
   "devDependencies": {
     "ava": "^0.16.0",
