--- a/importer/package.json
+++ b/importer/package.json
@@ -79,9 +79,13 @@
     "data.maybe": "^1.2.2",
     "elasticsearch": "^12.0.1",
     "knex": "^0.12.6",
+    "libxmljs": "^0.18.0",
+    "node-expat": "^2.3.15",
     "pg": "^6.1.0",
     "ramda": "^0.22.1",
-    "xml-stream": "^0.4.5"
+    "xml-stream": "^0.4.5",
+    "xml2js": "^0.4.17",
+    "xml2json": "^0.10.0"
   },
   "devDependencies": {
     "ava": "^0.16.0",
