--- a/client/package.json
+++ b/client/package.json
@@ -1,39 +1,22 @@
 {
-  "name": "mobx-isomorphic-starter",
-  "main": "index.js",
+  "name": "patoogle-client",
   "version": "0.1.0",
-  "description": "Clean isomorphic version of a Mobx + React + React-router + Webpack starter kit",
-  "author": "Sam Megidov <sam@megidov.com>",
-  "license": "MIT",
-  "private": true,
-  "scripts": {},
+  "description": "client app for patoogle",
+  "main": "index.js",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "author": "Lucas Schejtman <lucas.schejtman@gmail.com>",
+  "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "body-parser": "^1.15.2",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "mobx": "^2.5.2",
-    "mobx-react": "^3.5.6",
-    "mongoose": "^4.6.1",
-    "morgan": "^1.7.0",
-    "node-sass": "^3.10.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
-    "sass-loader": "^4.0.2",
-    "serve-favicon": "^2.3.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "next": "^2.0.0-beta",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "styled-components": "1.2.1"
   },
   "devDependencies": {
-    "material-ui": "^0.16.1",
-    "react-tap-event-plugin": "^1.0.0",
-    "webpack-dev-server": "^1.16.1"
+    "babel-preset-env": "^1.2.1"
   }
 }
