--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "author": "Lucas Schejtman <lucas.schejtman@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "hedron": "^0.6.0",
     "next": "^2.0.0-beta",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
